--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 html,body{
-    font-family: "Gilroy-Regular";
+    font-family: "sans-serif";
     background-color: #222;
     height: 100%;
     width: 100%;
